Updated ARCHITECTURE.md